# onnxInsights

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/onnxProfile/: onnx_llm_profiling.py  onnx_profiling.py  onnx_profiling_analysis.py
src/onnxInsights/: README.md  __init__.py  memoryView.py  onnxOPS.py  onnxProfiler.py
