# pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onnxInsights"
dynamic = ["version"]
authors = [
    {name = "Shamith Achanta", email = "achantashamith007@gmail.com"},
]
description = "Getting to understand ONNX models better for efficient inference, practical applications and pipelines"
keywords = ["onnxInsights", "onnx", "onnxruntime", "static profiling", "onnx profiling"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">= 3.10"
dependencies = [
    "pip",
    "tzdata",
    "wheel",
    "pytest",
    "cmake",
    "numpy<2.0.0",
    "onnx",
    "onnxruntime",
    "matplotlib"
]

[tool.hatch.version]
path = "src/onnxInsights/__init__.py"

[project.urls]
repository = "https://github.com/shamith2/onnxInsights"
